feat:detail